<resources>

    <string name="server_base_url">http://10.0.2.2:4040</string>
    <string name="preference_file_key">preferenceFileKey</string>
    <string name="authorization_key">authorizationKey</string>
    <string name="user_info_key">userInfoKey</string>

    <!-- Strings related to main activity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_username">Username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_ranking">Ranking</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_view_items">Item</string>
    <string name="tab_view_friends">Friend</string>

    <!-- Strings related to login and register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forget_password">Forget Password?</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_confirm_not_match">The confirmation password does not match</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- String related to search -->
    <string name="search_hint">Type anything here</string>
    <string name="search_item_filter">Item</string>
    <string name="search_user_filter">User</string>
    <string name="search_game_option">Game</string>
    <string name="search_anime_option">Anime</string>
    <string name="search_manga_option">Manga</string>
    <string name="search_item_title">ITEMS: %1$s</string>
    <string name="search_user_title">USERS: %1$s</string>
    <string name="search_result_not_found">No search result</string>

    <!-- String related to profile -->
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="profile_action_edit">Edit</string>
    <string name="profile_action_save">Save</string>
    <string name="profile_no_items">No Items</string>
    <string name="profile_no_friends">No Friends</string>

    <string name="information_not_available">Not Available</string>

    <!-- String related to suggestion -->
    <string name="suggestion_action_interested">interested</string>
    <string name="suggestion_action_uninterested">uninterested</string>

    <!-- String related to view friend -->
    <string name="view_friend_username_tag">Username:</string>
    <string name="view_friend_gender_tag">Gender:</string>
    <string name="view_friend_detail_not_available">Not Available</string>

    <!-- String related to view item list -->
    <string name="view_item_game_button">Game</string>
    <string name="view_item_anime_button">Anime</string>
    <string name="view_item_manga_button">Manga</string>

    <!-- String related to view item -->
    <string name="view_item_detail_name_tag">Name:</string>
    <string name="view_item_detail_category_tag">Category:</string>
    <string name="view_item_detail_description_tag">Description:</string>
    <string name="view_item_detail_source_tag">Source:</string>
    <string name="view_item_detail_not_available">Not Available</string>

    <!-- Strings related to navigation menu -->
    <string name="nav_home">Home</string>
    <string name="nav_import_data">Import Data</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_logout">Logout</string>

    <!-- Strings related to profile fragment -->
    <string name="profile_about_me_tag">About me</string>
    <string name="profile_description">No Description</string>
    <string name="profile_contact_tag">Contact</string>
    <string name="profile_email_tag">Email</string>
    <string name="profile_email">No Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to import data -->
    <string name="import_data_text_hint">Type Here</string>
    <string name="import_data_username_tag">Username</string>
    <string name="import_data_user_id_tag">User ID</string>

</resources>
