<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_18dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_import_data"
            android:icon="@drawable/ic_import_export_black_18dp"
            android:title="@string/nav_import_data" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_18dp"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_18dp"
            android:title="@string/nav_logout" />
    </group>

</menu>
