<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/item_detail_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_account_box_black_48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/item_detail_name_tag"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/view_item_detail_name_tag"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_detail_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_not_available"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_detail_category_tag"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/view_item_detail_category_tag"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_detail_category_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_not_available"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_detail_description_tag"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/view_item_detail_description_tag"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_detail_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_not_available"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_detail_source_tag"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/view_item_detail_source_tag"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_detail_source_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_not_available"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>