<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ViewFriendActivity">

    <ImageView
        android:id="@+id/friend_imageview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_account_box_black_48dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/view_friend_username_tag"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/friend_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_friend_detail_not_available"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/view_friend_gender_tag"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/friend_gender_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_friend_detail_not_available"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>