<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:padding="12dp"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/filter_button_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/game_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/view_item_game_button"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/anime_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/view_item_anime_button"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/manga_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/view_item_manga_button"
            android:textSize="16sp" />
    </RadioGroup>

    <android.support.v7.widget.CardView
        android:id="@+id/suggest_user_card"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        app:cardBackgroundColor="@color/tiffany_blue"
        app:cardCornerRadius="12dp"
        app:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/suggest_user_button"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:background="@android:color/background_light"
                app:srcCompat="@drawable/ic_menu_gallery" />

            <TextView
                android:id="@+id/suggest_user_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/suggest_user_button"
                android:layout_below="@id/suggest_user_button"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:text="@string/information_not_available"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/suggest_user_description"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/suggest_user_button"
                android:layout_below="@id/suggest_user_name"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:text="@string/information_not_available"
                android:textSize="16sp"
                android:visibility="gone" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/suggest_user_interested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            app:backgroundTint="@android:color/holo_blue_bright"
            app:rippleColor="@android:color/holo_blue_dark"
            app:srcCompat="@drawable/ic_done" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/suggest_user_uninterested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            app:srcCompat="@drawable/ic_clear" />
    </RelativeLayout>

</LinearLayout>